Fix content area top padding on mobile

--- a/docs/index.css
+++ b/docs/index.css
@@ -79,7 +79,7 @@ body {
     align-items: center;
     padding: 20px;
     gap: 31px;
-    padding-top: 310px;
+    padding-top: 280px;
 }
 
 .nav-section {
